[1.403] sync - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -471,10 +471,7 @@ $ <b>man -k -s 8 mount</b>
 позволяет объединить несколько разделов OpenBSD
 <a href="https://man.openbsd.org/disklabel">disklabel(8)</a>
 в виртуальный <a href="https://man.openbsd.org/sd">sd(4)</a> диск.
-С этим виртуальным диском мы работаем как и с любым другим в системе. Сначала
-он разбивается на разделы при помощи <a href="#fdisk">fdisk</a> (на платформах,
-поддерживаемых fdisk), а затем, как и обычно, создаются
-<a href="#disklabel">disklabels</a>.
+С этим виртуальным диском мы работаем как и с любым другим в системе.
 
 <p>
 <!-- XXXrelease - update if raid booting capabilities change -->
@@ -607,7 +604,6 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 <p>
 Даже если вы создадите несколько RAID-массивов, имя устройства всегда будет
 <code>softraid0</code>.
-Там не будет <code>softraid1</code> или что-нибудь еще.
 
 <p>
 Поскольку новое устройство, где вы планируете создать основную загрузочную
@@ -623,7 +619,6 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 </pre>
 
 Теперь вы готовы начать установку OpenBSD.
-К процессу установки пререходим как обычно, выбрав «install» или «exit» в консоли.
 Создайте все разделы на вашем новом softraid диске (<code>sd2</code> в этом примере),
 который должен быть там, а не на <code>sd0</code> или <code>sd1</code>
 (это не-RAID диски).
@@ -652,7 +647,7 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 
 Это также может быть сделано в
 <a href="faq10.html#LostPW">однопользовательском режиме</a>
-или при помощи процедуры <a href="faq4.html#bsd.rd">установки ядра</a>.
+или при помощи процедуры <a href="faq4.html#bsd.rd">ramdisk ядра</a>.
 
 <h3 id="softraidFDE">Полное шифрование диска</h3>
 
@@ -666,7 +661,7 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 <p>
 В качестве альтернативы использования passphrase можно использовать ключ,
 хранящийся на отдельном устройстве (например, на USB-накопителе),
-чтобы разблокировать зашифрованный диск.
+чтобы зашифровать диск.
 
 <p>
 В <code>(S)hell</code> приглашении установщика
