--- a/arm64.html
+++ b/arm64.html
@@ -135,8 +135,11 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Apple MacBook Pro (14-inch, M1 Pro/Max, 2021)
 		<li>Apple MacBook Pro (16-inch, M1 Pro/Max, 2021)
 		<li>Apple Studio (M1 Max/Ultra, 2022)
-		<li>Apple MacBook Air (M2, 2022)
+		<li>Apple MacBook Air (13-inch, M2, 2022)
 		<li>Apple MacBook Pro (13-inch, M2, 2022)
+		<li>Apple MacBoot Air (15-inch, M2, 2023)
+		<li>Apple MacBook Pro (14-inch, M2 Pro/Max, 2023)
+		<li>Apple MacBook Pro (16-inch, M2 Pro/Max, 2023)
 	</ul>
 	<li>Broadcom BCM2837/BCM2711
 	<ul>
@@ -158,11 +161,12 @@ OpenBSD/arm64 работает на следующем железе:
 	</ul>
 	<li>Qualcomm Snapdragon 7cx (SC7180/SC7180P)
 	<ul>
-		<li>Acer Aspire One</a>
+		<li>Acer Aspire One
 	</ul>
 	<li>Qualcomm Snapdragon 8cx Gen 3 (SC8280XP)
 	<ul>
-		<li>Lenovo ThinkPad X13s Gen 1</a>
+		<li>Lenovo ThinkPad X13s Gen 1
+		<li>Microsoft Windows Dev Kit 2023
 	</ul>
 	<li>Rockchip RK3328/RK3399(pro)
 	<ul>
@@ -172,7 +176,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li><a href="https://en.t-firefly.com/product/rk3399.html">Firefly-RK3399</a>
 		<li><a href="https://wiki.friendlyarm.com/wiki/index.php/NanoPC-T4">FriendlyElec NanoPC-T4</a>
 		<li><a href="https://www.theobroma-systems.com/som-product/rk3399-q7/">Theobroma Systems RK3399-Q7</a>
-		<li><a href="https://wiki.radxa.com/RockpiN10">Radxa Rock Pi N10</a>
+		<li><a href="https://wiki.radxa.com/RockpiN10">Radxa ROCK Pi N10</a>
 	</ul>
 	<li>Rockchip RK3566/RK3568
 	<ul>
@@ -180,6 +184,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li><a href="https://www.pine64.org/quartz64b/">Pine64 Quartz64 Model B</a>
 		<li><a href="https://en.t-firefly.com/product/industry/rocrk3566pc.html">ROC-RK3566-PC</a>
 		<li><a href="https://wiki.friendlyelec.com/wiki/index.php/NanoPi_R5S">NanoPi R5S</a>
+		<li><a href="https://wiki.radxa.com/Rock3/3a">Radxa ROCK 3A</a>
 	</ul>
 	<li>Socionext SC2A11
 	<ul>
