--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -40,12 +40,10 @@
 </h2>
 
 <p id="callout">
-Релиз <a href="https://www.opensmtpd.org/announces/release-7.3.0p0.txt">OpenSMTPD 7.3</a>
-состоялся 17 июня 2023 года<br>
-Последний minor release
-<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p2.tar.gz">OpenSMTPD 7.3.0p2</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p2.sum.sig">sha256</a>]
-состоялся 20 сентября 2023 года
+Релиз <a href="https://www.opensmtpd.org/announces/release-7.4.0p0.txt">OpenSMTPD 7.4</a>
+состоялся 25 октября 2023 года<br>
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p0.tar.gz">OpenSMTPD 7.4.0p0</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p0.sum.sig">sha256</a>]
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
