[1.14] sync - opensmtpd/manual.html

--- a/opensmtpd/manual.html
+++ b/opensmtpd/manual.html
@@ -30,6 +30,9 @@ Web руководства доступны в самой
  <li><a href="https://man.openbsd.org/smtpctl">smtpctl(8)</a>
      &mdash; менеджер SMTP демона
 
+ <li><a href="https://man.openbsd.org/smtp">smtp(1)</a>
+     &mdash; клиент SMTP
+
  <li><a href="https://man.openbsd.org/newaliases">newaliases(8)</a>
      &mdash; alias mappings генератор
 
@@ -47,6 +50,9 @@ Web руководства доступны в самой
 
  <li><a href="https://man.openbsd.org/sendmail">sendmail(8)</a>
      &mdash; просмотр очереди писем (a mail enqueuer) для smtpd
+
+ <li><a href="https://man.openbsd.org/smtpd-filters">smtpd-filters(7)</a>
+     &mdash; API фильтрации для демона smtpd
 </ul>
 
 <p>
