[1.69] update link to donations page - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -12,12 +12,12 @@
 
 <header>Проект OpenSMTPD</header>
 <ul>
-	<li><a href="goals.html">Цели проекта</a>
-	<li><a href="papers.html">Доклады</a>
-	<li><a href="security.html">Безопасность</a>
-	<li><a href="manual.html">Руководства</a>
-	<li><a href="list.html">Почтовые рассылки</a>
-	<li><a href="https://opensmtpd.org/donations.html">Пожертвования</a>
+	<li><a href="goals.html"    >Цели проекта</a>
+	<li><a href="papers.html"   >Доклады</a>
+	<li><a href="security.html" >Безопасность</a>
+	<li><a href="manual.html"   >Руководства</a>
+	<li><a href="list.html"     >Почтовые рассылки</a>
+	<li><a href="donations.html">Пожертвования</a>
 </ul>
 
 <header>Для OpenBSD</header>
