[1.22] fix link to index - opensmtpd/donations.html

--- a/opensmtpd/donations.html
+++ b/opensmtpd/donations.html
@@ -9,7 +9,7 @@
 <link rel="canonical" href="https://openbsd-ru.github.io/opensmtpd/donations.html">
 
 <h2 id=OpenBSD>
-<a href="../index.html">
+<a href="index.html">
 <i>Open</i><b>SMTPD</b></a>
 Пожертвования
 </h2>
