[1.556] sync - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -507,8 +507,8 @@ vnd0
 Если у вас нет системы с OpenBSD с выходом в интернет, используйте другой
 компьютер для загрузки соответствующего файлов с
 <!-- XXX needs https -->
-<a href="http://firmware.openbsd.org">firmware.openbsd.org</a>, после чего
-скопируейте их на USB-флешку, с которой может работать OpenBSD.
+<a href="http://firmware.openbsd.org/firmware/">https://firmware.openbsd.org/firmware/</a>,
+после чего скопируейте их на USB-флешку, с которой может работать OpenBSD.
 Затем, в OpenBSD системе подключите устройство при помощи
 <a href="https://man.openbsd.org/mount">mount(8)</a> и используйте все ту
 же программу <a href="https://man.openbsd.org/fw_update">fw_update(8)</a>
