[1.174] sync, h2k23 - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -89,6 +89,17 @@ td {
 
 <table>
 <td>
+    <a id="h2k23" href="images/hackathons/h2k23.gif">
+    <img src="images/hackathons/h2k23-s.gif" alt="h2k23"></a><br>
+    h2k23: hackathon<br>
+    Ноябрь 7 - 13, 2023<br>
+    Коимбра, Португалия<br>
+    18 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и поддержке университета Коимбры.
+    <br>
+<td>
     <a id="p2k23" href="images/hackathons/p2k23.gif">
     <img src="images/hackathons/p2k23-s.gif" alt="p2k23"></a><br>
     p2k23: ports hackathon<br>
@@ -110,6 +121,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="w2k23" href="images/hackathons/w2k23.gif">
     <img src="images/hackathons/w2k23-s.gif" alt="w2k23"></a><br>
@@ -121,7 +133,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Martin Pieuchot.
     <br>
-<tr>
 <td>
     <a id="m2k23" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -143,6 +154,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Pedro Almeida.
+<tr>
 <td>
     <a id="g2k22" href="images/hackathons/g2k22.gif">
     <img src="images/hackathons/g2k22-s.gif" alt="g2k22"></a><br>
@@ -153,7 +165,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a> и
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="r2k22" href="images/hackathons/r2k22.gif">
     <img src="images/hackathons/r2k22-s.gif" alt="r2k22"></a><br>
@@ -177,6 +188,7 @@ td {
     поддержке Pedro Almeida и
     <a href="https://www.cm-gouveia.pt/">муниципалитета Говеи</a>.
     <br>
+<tr>
 <td>
     <a id="k2k21" href="images/hackathons/k2k21.gif">
     <img src="images/hackathons/k2k21-s.gif" alt="k2k21"></a><br>
@@ -186,7 +198,6 @@ td {
     26 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="k2k20" href="images/hackathons/k2k20.gif">
     <img src="images/hackathons/k2k20-s.gif" alt="k2k20"></a><br>
@@ -206,6 +217,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Росса Л. Ричардсона.
+<tr>
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
@@ -217,7 +229,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="https://www.seehotel-huberhof.de">Seehotel Huberhof</a>.
     <br>
-<tr>
 <td>
     <a id="e2k19" href="images/hackathons/e2k19.gif">
     <img src="images/hackathons/e2k19-s.gif" alt="e2k19-s"></a><br>
@@ -240,6 +251,7 @@ td {
     и поддержке
     <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук бухарестского университета</a>.
     <br>
+<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -250,7 +262,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif" alt="t2k19-s"></a><br>
@@ -273,6 +284,7 @@ td {
     <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -283,7 +295,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif" alt="n2k18-s"></a><br>
@@ -304,6 +315,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -314,7 +326,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif" alt="a2k18-s"></a><br>
@@ -335,6 +346,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -346,7 +358,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
-<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif" alt="t2k17-s"></a><br>
@@ -367,6 +378,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -375,7 +387,6 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
-<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif" alt="a2k17-s"></a><br>
@@ -408,6 +419,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
+<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -417,7 +429,6 @@ td {
     10 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -439,6 +450,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.oracle.com">Oracle</a>, а также помощи
     <a href="http://cuni.cz">Charles University</a>.
+<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -449,7 +461,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif" alt="n2k15-s"></a><br>
@@ -470,6 +481,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -480,7 +492,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
-<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif" alt="j2k15-s"></a><br>
@@ -500,6 +511,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://sait.ca">SAIT</a>.
+<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -510,7 +522,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Энди Хенрдерсона (Andy Henderson).
-<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif" alt="s2k15-s"></a><br>
@@ -531,6 +542,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
+<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -541,7 +553,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
-<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
@@ -562,6 +573,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -572,7 +584,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
@@ -593,6 +604,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -602,7 +614,6 @@ td {
     9 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif" alt="n2k12-s"></a><br>
@@ -621,6 +632,7 @@ td {
     41 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -632,7 +644,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a>
     и <a href="http://www.u-psud.fr">Paris-Sud University</a>.
-<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif" alt="p2k11-s"></a><br>
@@ -652,6 +663,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -662,7 +674,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
-<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif" alt="c2k11-s"></a><br>
@@ -681,6 +692,7 @@ td {
     15 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -690,7 +702,6 @@ td {
     19 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif" alt="j2k10-s"></a><br>
@@ -707,6 +718,7 @@ td {
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <br>
     <br>
@@ -724,7 +736,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
-<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif" alt="h2k9-s"></a><br>
@@ -744,6 +755,7 @@ td {
     14 разоаботчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -753,7 +765,6 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.iis.se/english/">.se Foundation</a>.
-<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
@@ -770,6 +781,7 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -780,7 +792,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
     <img src="images/hackathons/p2k8-s.gif" alt="p2k8-s"></a><br>
@@ -799,6 +810,7 @@ td {
     55 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -809,7 +821,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и помощи Mark Uemura.
-<tr>
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif" alt="h2k7-s"></a><br>
@@ -829,6 +840,7 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -838,7 +850,6 @@ td {
     50 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif" alt="f2k7-s"></a><br>
@@ -858,6 +869,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -867,7 +879,6 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif" alt="k2k6-s"></a><br>
@@ -883,6 +894,7 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
+<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -892,7 +904,6 @@ td {
     47 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif" alt="v2k5-s"></a><br>
@@ -911,6 +922,7 @@ td {
     60 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -920,7 +932,6 @@ td {
     46 разработчика<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
@@ -939,6 +950,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
+<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -947,7 +959,6 @@ td {
     Калгари, Альберта, Канада<br>
     42 разработчика<br>
     Организован благодаря финансированию со стороны DARPA.
-<tr>
 <td>
     <a id="c2k1-2" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -965,6 +976,7 @@ td {
     25 разработчиков<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.mit.edu">MIT</a>.
+<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -974,7 +986,6 @@ td {
     18 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -1009,3 +1020,4 @@ k2k21, h2k21 создана Natasha Allegri.<br>
 h2k22 создана Pedro Almeida.<br>
 w2k23 создана Stefan Sperling.<br>
 p2p23 создана Sophie Smyth.<br>
+h2k23 создана António Sampaio.<br>
