--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -41,9 +41,11 @@
 
 <p id="callout">
 Релиз <a href="https://www.opensmtpd.org/announces/release-7.4.0p0.txt">OpenSMTPD 7.4</a>
-состоялся 25 октября 2023 года<br>
-<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p0.tar.gz">OpenSMTPD 7.4.0p0</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p0.sum.sig">sha256</a>]
+состоялся 25 октября 2023<br>
+Последний minor релиз
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p1.tar.gz">OpenSMTPD 7.4.0p1</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p1.sum.sig">sha256</a>]
+состоялся 16 ноября 2023
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
